force-app/main/default/objects/Sstudent__c/Sstudent__c.object-meta.xml
<CustomObject>
    <label>Sstudent</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sstudents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>