force-app/main/default/objects/Sstudent__c/fields/Peocess_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Peocess_Manager_Email__c</fullName>
    <label>Peocess Manager Email</label>
    <type>Email</type>
</CustomField>