force-app/main/default/objects/Sstudent__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <label>Process Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>