force-app/main/default/objects/Sstudent__c/fields/Technical_Skill_In__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skill_In__c</fullName>
    <label>Technical Skill In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Hadoop</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>