force-app/main/default/objects/Sstudent__c/listViews/QueuesLearning_Sstudent.listView-meta.xml
<ListView>
    <fullName>QueuesLearning_Sstudent</fullName>
    <filterScope>Queue</filterScope>
    <label>QueuesLearning</label>
    <queue>QueuesLearning</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>